...
  }

  @override
  Widget build(BuildContext context) {
    //--------------------- emergency contact name field ---------------------
    final emergencyContactNameField = TextFormField(
        key: Key('nameField_addPage'),
        autofocus: true,
        controller: emergencyContactNameEditingController,
        keyboardType: TextInputType.name,
        validator: (value) {
          RegExp regex = new RegExp(r'^.{3,}$');
          if (value!.isEmpty) {
...
            borderRadius: BorderRadius.circular(10),
          ),
        ));

    //---------------------emergency contact email field---------------------
    final emergencyContactEmailField = TextFormField(
        key: Key('emailField_addPage'),
        autofocus: false,
        controller: emergencyContactEmailEditingController,
        keyboardType: TextInputType.emailAddress,
        validator: (value) {
          if (value!.isEmpty) {
            return ("Please Enter Your Email");
...
                        mainAxisAlignment: MainAxisAlignment
                            .spaceEvenly, // space between the buttons
                        children: [
                          //------------------------- Add Button -------------------------

                          ElevatedButton(
                            key: Key('addButton_addPage'),
                            onPressed: submitData,
                            style: ElevatedButton.styleFrom(
                              primary: Color(0xFF4E4EF7),
                            ),
                            child: Padding(
                              padding: const EdgeInsets.only(
...
