...

//------------------------------------Return to the case numbers list page------------------------------------

              Container(
                margin: EdgeInsets.only(top: 80, left: 15),
                child: IconButton(
                  key: Key('returnButton_reportPage'),
                  icon: Icon(Icons.arrow_back_rounded),
                  color: Colors.white,
                  onPressed: () {
                    Navigator.pop(
                      context,
                      MaterialPageRoute(
...
                                          style: TextStyle(
                                              fontSize: 15,
                                              fontWeight: FontWeight.bold,
                                              color: Color(0xFF6666FF))),
                                      IconButton(
                                          key: Key(
                                              'copyLocationLinkButton_reportPage'),
                                          onPressed: () {
                                            setState(() {
                                              locationLink =
                                                  data['userLocation'];
                                            });
                                            Clipboard.setData(ClipboardData(
...
                                        .centerLeft, // or AlignmentDirectional.center,

                                    child: Container(
                                      margin:
                                          EdgeInsets.only(left: 20, right: 8),
                                      child: ElevatedButton(
                                        key: Key('playAudioButton_Page'),
                                        child: const Text('Play'),
                                        style: ElevatedButton.styleFrom(
                                          primary: Color(0xFF6666FF),
                                          padding: const EdgeInsets.only(
                                              left: 30,
                                              right: 30,
...
