...
                  //-----------------Verification Code Input--------------------------
                  /////////////////////////////////////////////////////////////////////
                  FadeInDown(
                    delay: Duration(milliseconds: 700),
                    duration: Duration(milliseconds: 500),
                    child: TextFormField(
                        key: Key('pinTextField_pinPage'),
                        maxLength: 4,
                        autofocus: true,
                        controller: confirmPinEditingController,
                        onSaved: (value) {
                          confirmPinEditingController.text = value!;
                        },
...
                  //-----------------Verification Code Button--------------------------
                  /////////////////////////////////////////////////////////////////////
                  FadeInDown(
                    delay: Duration(milliseconds: 800),
                    duration: Duration(milliseconds: 500),
                    child: MaterialButton(
                      key: Key('verifyPinButton_pinPage'),
                      elevation: 0,
                      onPressed: () {
                        verify();
                      },
                      color: Color(0xFF6666FF),
                      padding: EdgeInsets.only(
...
